--- a/packages/canvas-extension/package.json
+++ b/packages/canvas-extension/package.json
@@ -32,7 +32,7 @@
     "@phosphor/disposable": "^1.1.2",
     "@phosphor/messaging": "^1.2.2",
     "@phosphor/widgets": "^1.5.0",
-    "@cycle/canvas": "^0.1.0"
+    "@regulus1/canvas": "^0.1.0"
   },
   "devDependencies": {
     "rimraf": "^2.5.2",
